--- a/config/singbox/yy_config_ipyy2_tun.json
+++ b/config/singbox/yy_config_ipyy2_tun.json
@@ -26,8 +26,7 @@
             { "clash_mode": "global", "server": "proxyDns" },
             {
               "type": "logical", "mode": "and",
-              "rules": [{ "rule_set": "geosite-geolocation-!cn", "invert": true },
-                        { "rule_set": "geoip-cn" } ],
+              "rules": [{ "rule_set": "geosite-geolocation-!cn", "invert": true }],
               "server": "proxyDns",
               "client_subnet": "114.114.114.114/24"
             }
