--- a/config/singbox/yy_config_ipyy2_tun.json
+++ b/config/singbox/yy_config_ipyy2_tun.json
@@ -21,7 +21,8 @@
       "rules": [
             { "rule_set": "geosite-ads", "server": "block"},		
             { "outbound": "any", "server": "localDns", "disable_cache": true },
-            { "rule_set": "geosite-cn", "server": "localDns" },		  
+            { "rule_set": "geosite-cn", "server": "localDns" },
+            { "geosite": [ "cn" ], "server": "dns_direct" },
             { "clash_mode": "direct", "server": "localDns" },
             { "clash_mode": "global", "server": "proxyDns" }
         ],
