--- a/config/singbox/yy_config_ipyy2_tun.json
+++ b/config/singbox/yy_config_ipyy2_tun.json
@@ -22,6 +22,7 @@
             { "rule_set": "geosite-ads", "server": "block"},		
             { "outbound": "any", "server": "localDns", "disable_cache": true },
             { "rule_set": "geosite-cn", "server": "localDns" },
+            { "geosite": [ "cn" ], "server": "localDns" },
             { "clash_mode": "direct", "server": "localDns" },
             { "clash_mode": "global", "server": "proxyDns" }
         ],
@@ -107,28 +108,28 @@
       ],
       
       "rule_set": [
-        { "tag": "geosite-chat", "type": "remote", "format": "binary", "url": "https://git.rdn.us.kg/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/sing/geo/geosite/category-ai-chat-!cn.srs", "download_detour": "🎯 全球直连" },
-        { "tag": "geosite-youtube", "type": "remote", "format": "binary", "url": "https://git.rdn.us.kg/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/sing/geo/geosite/youtube.srs", "download_detour": "🎯 全球直连" },
-        { "tag": "geosite-google", "type": "remote", "format": "binary", "url": "https://git.rdn.us.kg/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/sing/geo/geosite/google.srs", "download_detour": "🎯 全球直连" },
-        { "tag": "geosite-github", "type": "remote", "format": "binary", "url": "https://git.rdn.us.kg/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/sing/geo/geosite/github.srs", "download_detour": "🎯 全球直连" },
-        { "tag": "geosite-telegram", "type": "remote", "format": "binary", "url": "https://git.rdn.us.kg/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/sing/geo/geosite/telegram.srs", "download_detour": "🎯 全球直连" },
-        { "tag": "geosite-tiktok", "type": "remote", "format": "binary", "url": "https://git.rdn.us.kg/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/sing/geo/geosite/tiktok.srs", "download_detour": "🎯 全球直连" },
-        { "tag": "geosite-netflix", "type": "remote", "format": "binary", "url": "https://git.rdn.us.kg/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/sing/geo/geosite/netflix.srs", "download_detour": "🎯 全球直连" },
-        { "tag": "geosite-apple", "type": "remote", "format": "binary", "url": "https://git.rdn.us.kg/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/sing/geo/geosite/apple.srs", "download_detour": "🎯 全球直连" },
-        { "tag": "geosite-microsoft", "type": "remote", "format": "binary", "url": "https://git.rdn.us.kg/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/sing/geo/geosite/microsoft.srs", "download_detour": "🎯 全球直连" },
-        { "tag": "geosite-onedrive", "type": "remote", "format": "binary", "url": "https://git.rdn.us.kg/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/sing/geo/geosite/onedrive.srs", "download_detour": "🎯 全球直连" },
-        { "tag": "geosite-geolocation-!cn", "type": "remote", "format": "binary", "url": "https://git.rdn.us.kg/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/sing/geo/geosite/geolocation-!cn.srs", "download_detour": "🎯 全球直连" },
-        { "tag": "geosite-cn", "type": "remote", "format": "binary", "url": "https://git.rdn.us.kg/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/sing/geo/geosite/cn.srs", "download_detour": "🎯 全球直连" },
-        { "tag": "geosite-private", "type": "remote", "format": "binary", "url": "https://git.rdn.us.kg/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/sing/geo/geosite/private.srs", "download_detour": "🎯 全球直连" },
-        { "tag": "geosite-gfw", "type": "remote", "format": "binary", "url": "https://git.rdn.us.kg/https://github.com/Toperlock/sing-box-geosite/raw/refs/heads/main/rule/gfw.srs", "download_detour": "🎯 全球直连" },
-        { "tag": "geosite-ads", "type": "remote", "format": "binary", "url": "https://git.rdn.us.kg/https://github.com/Toperlock/sing-box-geosite/raw/refs/heads/main/rule/adrules_domainset.srs", "download_detour": "🎯 全球直连" },
-        { "tag": "geoip-google", "type": "remote", "format": "binary", "url": "https://git.rdn.us.kg/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/sing/geo/geoip/google.srs", "download_detour": "🎯 全球直连" },
-        { "tag": "geoip-telegram", "type": "remote", "format": "binary", "url": "https://git.rdn.us.kg/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/sing/geo/geoip/telegram.srs", "download_detour": "🎯 全球直连" },     
-        { "tag": "geoip-netflix", "type": "remote", "format": "binary", "url": "https://git.rdn.us.kg/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/sing/geo/geoip/netflix.srs", "download_detour": "🎯 全球直连" },     
-        { "tag": "geoip-apple", "type": "remote", "format": "binary", "url": "https://git.rdn.us.kg/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/sing/geo-lite/geoip/apple.srs", "download_detour": "🎯 全球直连" },
-        { "tag": "geoip-cn", "type": "remote", "format": "binary", "url": "https://git.rdn.us.kg/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/sing/geo/geoip/cn.srs", "download_detour": "🎯 全球直连" },
-        { "tag": "geoip-private", "type": "remote", "format": "binary", "url": "https://git.rdn.us.kg/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/sing/geo/geoip/private.srs", "download_detour": "🎯 全球直连" },
-        { "tag": "geosite-bank-cn", "type": "remote", "format": "binary", "url": "https://git.rdn.us.kg/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/refs/heads/sing/geo/geosite/category-bank-cn.srs", "download_detour": "🎯 全球直连" }
+        { "tag": "geosite-chat", "type": "remote", "format": "binary", "url": "https://git.rdn.us.kg/https://raw.githubusercontent.com/rdndsy/meta-rules-dat/refs/heads/sing/geo/geosite/category-ai-chat-!cn.srs", "download_detour": "🎯 全球直连" },
+        { "tag": "geosite-youtube", "type": "remote", "format": "binary", "url": "https://git.rdn.us.kg/https://raw.githubusercontent.com/rdndsy/meta-rules-dat/refs/heads/sing/geo/geosite/youtube.srs", "download_detour": "🎯 全球直连" },
+        { "tag": "geosite-google", "type": "remote", "format": "binary", "url": "https://git.rdn.us.kg/https://raw.githubusercontent.com/rdndsy/meta-rules-dat/refs/heads/sing/geo/geosite/google.srs", "download_detour": "🎯 全球直连" },
+        { "tag": "geosite-github", "type": "remote", "format": "binary", "url": "https://git.rdn.us.kg/https://raw.githubusercontent.com/rdndsy/meta-rules-dat/refs/heads/sing/geo/geosite/github.srs", "download_detour": "🎯 全球直连" },
+        { "tag": "geosite-telegram", "type": "remote", "format": "binary", "url": "https://git.rdn.us.kg/https://raw.githubusercontent.com/rdndsy/meta-rules-dat/refs/heads/sing/geo/geosite/telegram.srs", "download_detour": "🎯 全球直连" },
+        { "tag": "geosite-tiktok", "type": "remote", "format": "binary", "url": "https://git.rdn.us.kg/https://raw.githubusercontent.com/rdndsy/meta-rules-dat/refs/heads/sing/geo/geosite/tiktok.srs", "download_detour": "🎯 全球直连" },
+        { "tag": "geosite-netflix", "type": "remote", "format": "binary", "url": "https://git.rdn.us.kg/https://raw.githubusercontent.com/rdndsy/meta-rules-dat/refs/heads/sing/geo/geosite/netflix.srs", "download_detour": "🎯 全球直连" },
+        { "tag": "geosite-apple", "type": "remote", "format": "binary", "url": "https://git.rdn.us.kg/https://raw.githubusercontent.com/rdndsy/meta-rules-dat/refs/heads/sing/geo/geosite/apple.srs", "download_detour": "🎯 全球直连" },
+        { "tag": "geosite-microsoft", "type": "remote", "format": "binary", "url": "https://git.rdn.us.kg/https://raw.githubusercontent.com/rdndsy/meta-rules-dat/refs/heads/sing/geo/geosite/microsoft.srs", "download_detour": "🎯 全球直连" },
+        { "tag": "geosite-onedrive", "type": "remote", "format": "binary", "url": "https://git.rdn.us.kg/https://raw.githubusercontent.com/rdndsy/meta-rules-dat/refs/heads/sing/geo/geosite/onedrive.srs", "download_detour": "🎯 全球直连" },
+        { "tag": "geosite-geolocation-!cn", "type": "remote", "format": "binary", "url": "https://git.rdn.us.kg/https://raw.githubusercontent.com/rdndsy/meta-rules-dat/refs/heads/sing/geo/geosite/geolocation-!cn.srs", "download_detour": "🎯 全球直连" },
+        { "tag": "geosite-cn", "type": "remote", "format": "binary", "url": "https://git.rdn.us.kg/https://raw.githubusercontent.com/rdndsy/meta-rules-dat/refs/heads/sing/geo/geosite/cn.srs", "download_detour": "🎯 全球直连" },
+        { "tag": "geosite-private", "type": "remote", "format": "binary", "url": "https://git.rdn.us.kg/https://raw.githubusercontent.com/rdndsy/meta-rules-dat/refs/heads/sing/geo/geosite/private.srs", "download_detour": "🎯 全球直连" },
+        { "tag": "geosite-gfw", "type": "remote", "format": "binary", "url": "https://git.rdn.us.kg/https://raw.githubusercontent.com/rdndsy/sing-box-geosite/refs/heads/main/rule/gfw.srs", "download_detour": "🎯 全球直连" },
+        { "tag": "geosite-ads", "type": "remote", "format": "binary", "url": "https://git.rdn.us.kg/https://raw.githubusercontent.com/rdndsy/sing-box-geosite/refs/heads/main/rule/adrules_domainset.srs", "download_detour": "🎯 全球直连" },
+        { "tag": "geoip-google", "type": "remote", "format": "binary", "url": "https://git.rdn.us.kg/https://raw.githubusercontent.com/rdndsy/meta-rules-dat/refs/heads/sing/geo/geoip/google.srs", "download_detour": "🎯 全球直连" },
+        { "tag": "geoip-telegram", "type": "remote", "format": "binary", "url": "https://git.rdn.us.kg/https://raw.githubusercontent.com/rdndsy/meta-rules-dat/refs/heads/sing/geo/geoip/telegram.srs", "download_detour": "🎯 全球直连" },     
+        { "tag": "geoip-netflix", "type": "remote", "format": "binary", "url": "https://git.rdn.us.kg/https://raw.githubusercontent.com/rdndsy/meta-rules-dat/refs/heads/sing/geo/geoip/netflix.srs", "download_detour": "🎯 全球直连" },     
+        { "tag": "geoip-apple", "type": "remote", "format": "binary", "url": "https://git.rdn.us.kg/https://raw.githubusercontent.com/rdndsy/meta-rules-dat/refs/heads/sing/geo-lite/geoip/apple.srs", "download_detour": "🎯 全球直连" },
+        { "tag": "geoip-cn", "type": "remote", "format": "binary", "url": "https://git.rdn.us.kg/https://raw.githubusercontent.com/rdndsy/meta-rules-dat/refs/heads/sing/geo/geoip/cn.srs", "download_detour": "🎯 全球直连" },
+        { "tag": "geoip-private", "type": "remote", "format": "binary", "url": "https://git.rdn.us.kg/https://raw.githubusercontent.com/rdndsy/meta-rules-dat/refs/heads/sing/geo/geoip/private.srs", "download_detour": "🎯 全球直连" },
+        { "tag": "geosite-bank-cn", "type": "remote", "format": "binary", "url": "https://git.rdn.us.kg/https://raw.githubusercontent.com/rdndsy/meta-rules-dat/refs/heads/sing/geo/geosite/category-bank-cn.srs", "download_detour": "🎯 全球直连" }
       ]
     }
 }
