--- a/config/singbox/yy_config_ipyy4_tun.json
+++ b/config/singbox/yy_config_ipyy4_tun.json
@@ -13,7 +13,7 @@
 	
     "dns": {
       "servers": [
-        {"tag": "proxyDns", "type": "https", "server": "dns.google", "domain_resolver": "defaultDns", "client_subnet": "1.0.1.0", "detour": "🚀 节点选择" },
+        {"tag": "proxyDns", "type": "https", "server": "dns.google", "domain_resolver": "defaultDns", "detour": "🚀 节点选择" },
         {"tag": "localDns", "type": "h3", "server": "dns.alidns.com", "domain_resolver": "defaultDns", "detour": "🎯 全球直连"},
         {"tag": "defaultDns", "type": "udp", "server": "119.29.29.29", "detour": "🎯 全球直连"},
         {"tag": "block", "type": "predefined", "responses": [ {"rcode": "REFUSED"}]}
