--- a/config/singbox/yy_config_ipyy3_tun.json
+++ b/config/singbox/yy_config_ipyy3_tun.json
@@ -20,7 +20,7 @@
       ],
       "rules": [
             { "rule_set": "geosite-ads", "server": "block"},		
-            { "outbound": "any", "server": "localDns", "disable_cache": true },
+            { "outbound": "any", "server": "proxyDns", "disable_cache": true },
             { "rule_set": "geosite-cn", "server": "localDns" },
             { "clash_mode": "direct", "server": "localDns" },
             { "clash_mode": "global", "server": "proxyDns" }
