--- a/config/singbox/yy_config_ipyy3_tun.json
+++ b/config/singbox/yy_config_ipyy3_tun.json
@@ -71,7 +71,7 @@
       { "tag": "OutChina", "type": "selector", "outbounds": ["🚀 节点选择", "♻️ 自动选择", "🐸 手动切换", "🎯 全球直连", "{all}"]},
       { "tag": "🐠 漏网之鱼", "type": "selector", "outbounds": ["🎯 全球直连", "🚀 节点选择"]},
       { "tag": "🐸 手动切换", "type": "selector", "outbounds": ["{all}"]},
-      { "tag": "♻️ 自动选择", "type": "urltest", "outbounds": ["{all}"], "filter": [{ "action": "exclude", "keywords": ["G1|G7|g0|g1|g2|g7|A0|A3|AW"] }], "url": "http://www.gstatic.com/generate_204", "interval": "10m", "tolerance": 50 },
+      { "tag": "♻️ 自动选择", "type": "urltest", "outbounds": ["{all}"], "filter": [{ "action": "exclude", "keywords": ["G1|G7|g0|g1|g2|g7|A0|A3|a0|a3|AW"] }], "url": "http://www.gstatic.com/generate_204", "interval": "10m", "tolerance": 50 },
       { "tag": "GLOBAL", "type": "selector", "outbounds": ["♻️ 自动选择", "🐸 手动切换", "🚀 节点选择", "{all}"]},
       { "tag": "🎯 全球直连", "type": "direct" }
     ],
