--- a/config/mihomo/config.yaml
+++ b/config/mihomo/config.yaml
@@ -84,6 +84,7 @@ dns:
     - "+.msftconnecttest.com"
     - "+.msftncsi.com"
     - "time.*.com"
+    - "+.market.xiaomi.com"
   default-nameserver:
     - 223.5.5.5
   proxy-server-nameserver:
